--- a/collector/index.html
+++ b/collector/index.html
@@ -11,12 +11,15 @@
 	<button id="start_button">Track</button>
 	<button id="view_button">View</button>
 
+	<div id="positions"></div>
+
 	<pre id="positions_el"></pre>
 
 		
 
 	<!-- build:js app.min.js -->
 	<script type="text/javascript" src="lib.js"></script>
+	<script type="text/javascript" src="d3.v3.min.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 	<!-- endbuild -->
 
