--- a/collector/index.html
+++ b/collector/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width,user-scalable=no">
 </head>
 <body>
+	<input id="identifier" placeholder="identifier" />
 	<p id="counter">0</p>
 	<button id="start_button">Track</button>
 	<button id="view_button">View</button>
