added dumps and better hacky scaling

--- a/collector/index.html
+++ b/collector/index.html
@@ -19,6 +19,8 @@
 		
 
 	<!-- build:js app.min.js -->
+
+	<script type="text/javascript" src="dump1.js"></script>
 	<script type="text/javascript" src="lib.js"></script>
 	<script type="text/javascript" src="d3.v3.min.js"></script>
 	<script type="text/javascript" src="index.js"></script>
