--- a/collector/index.html
+++ b/collector/index.html
@@ -9,8 +9,8 @@
 <body>
 	<input id="identifier" placeholder="identifier" />
 	<p id="counter">0</p>
-	<button id="start_button">Track</button>
-	<button id="view_button">View</button>
+	<button id="start_button">Start tracking this device</button>
+	<button id="view_button">View other devices</button>
 
 	<div id="positions"></div>
 
@@ -19,7 +19,6 @@
 		
 
 	<!-- build:js app.min.js -->
-
 	<script type="text/javascript" src="dump1.js"></script>
 	<script type="text/javascript" src="lib.js"></script>
 	<script type="text/javascript" src="d3.v3.min.js"></script>
