accuracy and meta tag

--- a/collector/index.html
+++ b/collector/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>party</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<meta name="viewport" content="width=device-width,user-scalable=no">
+	<meta name="viewport" content="width=500">
 </head>
 <body>
 	<input id="identifier" placeholder="identifier" />
-	<p id="counter">0</p>
+	<p>points: <span id="counter">0</span>, accuracy: <span id="accuracy">0</span></p>
 	<button id="start_button">Start tracking this device</button>
 	<button id="view_button">View other devices</button>
 
