--- a/collector/index.html
+++ b/collector/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>party</title>
+	<title>ota13</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta name="viewport" content="width=500">
 </head>
