--- a/local/index.html
+++ b/local/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
 	<title>ota13</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta name="viewport" content="width=500">
