--- a/local/index.html
+++ b/local/index.html
@@ -19,7 +19,7 @@
 		<li><a href="#"><img src="assets/droplet.png" /></a></li>
 		<li><a href="#" class="go"><img src="assets/go.png" /></a></li>
 		<li><a href="#"><img src="assets/undo.png" /></a></li>
-		<li><a href="#"><img src="assets/cloud-download.png" /></a></li>
+		<li><a href="#" id="upload_link"><img src="assets/cloud-download.png" /></a></li>
 	</ul>
 
 	<!-- build:js app.min.js -->
